--- a/env/prod/.env
+++ b/env/prod/.env
@@ -6,4 +6,4 @@ DB_PASSWORD=admin
 APP_PORT=5000
 
 
-ORIGINS="http://127.0.0.1:3000,http://localhost:3000"
+ORIGINS="http://msyamsula.com,https://msyamsula.com"
