docker local cluster

--- a/env/kube/.env
+++ b/env/kube/.env
@@ -6,4 +6,9 @@ DB_PASSWORD=admin
 APP_PORT=5000
 
 
-ORIGINS="http://13.250.149.254,http://messagingapi-clusterip"
+ORIGINS="http://syamsulkube.my.id,https://syamsulkube.my.id"
+ALLOWED_METHODS="GET,POST"
+ALLOWED_HEADERS="Content-Type,Accept,Content-Length"
+
+API_PREFIX=/api
+
