--- a/env/dev/.env
+++ b/env/dev/.env
@@ -1,4 +1,4 @@
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=postgres
 DB_USERNAME=admin
@@ -7,4 +7,7 @@ APP_PORT=5000
 
 
 ORIGINS="http://127.0.0.1:3000,http://localhost:3000,http://localhost"
-// ORIGINS="*"
+ALLOWED_METHODS="GET,POST"
+ALLOWED_HEADERS="Content-Type,Accept,Content-Length"
+
+API_PREFIX=""
