--- a/env/prod/.env
+++ b/env/prod/.env
@@ -7,3 +7,7 @@ APP_PORT=5000
 
 
 ORIGINS="http://msyamsula.com,https://msyamsula.com"
+ALLOWED_METHODS="GET,POST"
+ALLOWED_HEADERS="Content-Type,Accept,Content-Length"
+
+API_PREFIX=""
